[gd_scene load_steps=5 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://MenuController.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.980392, 0.0117647, 0.0117647, 1 )

[node name="Node2D" type="Node2D"]

[node name="Control" type="Control" parent="."]
margin_left = 3.0
margin_right = 1022.0
margin_bottom = 55.0
script = ExtResource( 2 )

[node name="Panels" type="Control" parent="Control"]
anchor_left = -1.003
anchor_bottom = 10.891
margin_left = 1103.06
margin_top = 59.0
margin_right = 407.0
margin_bottom = -273.005

[node name="Options Menu" type="Panel" parent="Control/Panels"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -325.997
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panels/Options Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 116.0

[node name="Button" type="Button" parent="Control/Panels/Options Menu/VBoxContainer"]
margin_right = 12.0
margin_bottom = 20.0
text = "test"
clip_text = true

[node name="Button2" type="Button" parent="Control/Panels/Options Menu/VBoxContainer"]
margin_top = 24.0
margin_right = 12.0
margin_bottom = 44.0
text = "laksdjf  lkdsajflksadfj  kdlsajf ;lasdjf kldsj faa;lsf"
clip_text = true

[node name="Button3" type="Button" parent="Control/Panels/Options Menu/VBoxContainer"]
margin_top = 48.0
margin_right = 12.0
margin_bottom = 68.0

[node name="RichTextLabel" type="RichTextLabel" parent="Control/Panels/Options Menu"]
margin_left = 6.0
margin_top = 21.0
margin_right = 266.0
margin_bottom = 83.0
text = "Game Name"

[node name="Fade Menu" type="Panel" parent="Control/Panels"]
visible = false
anchor_left = 1.0
anchor_right = 2.006
anchor_bottom = 1.0
margin_left = 2.0
margin_right = 0.0440063
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panels/Fade Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 116.0

[node name="Button" type="Button" parent="Control/Panels/Fade Menu/VBoxContainer"]
margin_right = 325.0
margin_bottom = 20.0
text = "test"
clip_text = true

[node name="Button2" type="Button" parent="Control/Panels/Fade Menu/VBoxContainer"]
margin_top = 24.0
margin_right = 325.0
margin_bottom = 44.0
text = "laksdjf  lkdsajflksadfj  kdlsajf ;lasdjf kldsj faa;lsf"
clip_text = true

[node name="Button3" type="Button" parent="Control/Panels/Fade Menu/VBoxContainer"]
margin_top = 48.0
margin_right = 325.0
margin_bottom = 68.0

[node name="RichTextLabel" type="RichTextLabel" parent="Control/Panels/Fade Menu"]
margin_left = 6.0
margin_top = 21.0
margin_right = 266.0
margin_bottom = 83.0
text = "Game Name"

[node name="Fade Menu2" type="Panel" parent="Control/Panels"]
visible = false
anchor_left = 1.0
anchor_right = 2.006
anchor_bottom = 1.0
margin_left = 334.0
margin_right = 332.044
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panels/Fade Menu2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 116.0

[node name="Button" type="Button" parent="Control/Panels/Fade Menu2/VBoxContainer"]
margin_right = 325.0
margin_bottom = 20.0
text = "test"
clip_text = true

[node name="Button2" type="Button" parent="Control/Panels/Fade Menu2/VBoxContainer"]
margin_top = 24.0
margin_right = 325.0
margin_bottom = 44.0
text = "laksdjf  lkdsajflksadfj  kdlsajf ;lasdjf kldsj faa;lsf"
clip_text = true

[node name="Button3" type="Button" parent="Control/Panels/Fade Menu2/VBoxContainer"]
margin_top = 48.0
margin_right = 325.0
margin_bottom = 68.0

[node name="RichTextLabel" type="RichTextLabel" parent="Control/Panels/Fade Menu2"]
margin_left = 6.0
margin_top = 21.0
margin_right = 266.0
margin_bottom = 83.0
text = "Game Name"

[node name="Player Menu" type="Panel" parent="Control/Panels"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
custom_styles/panel = SubResource( 5 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panels/Player Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 116.0

[node name="Button" type="Button" parent="Control/Panels/Player Menu/VBoxContainer"]
margin_right = 325.0
margin_bottom = 20.0
text = "test"
clip_text = true

[node name="Button3" type="Button" parent="Control/Panels/Player Menu/VBoxContainer"]
margin_top = 24.0
margin_right = 325.0
margin_bottom = 44.0

[node name="Panel" type="Panel" parent="Control"]
margin_right = 76.0
margin_bottom = 596.0

[node name="Option Button" type="Button" parent="Control/Panel"]
margin_left = 6.0
margin_top = 74.0
margin_right = 67.0
margin_bottom = 111.0
text = "Options Menu"
clip_text = true

[node name="Player Button" type="Button" parent="Control/Panel"]
margin_left = 6.0
margin_top = 129.0
margin_right = 67.0
margin_bottom = 166.0
text = "Players"
clip_text = true

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="button_down" from="Control/Panels/Fade Menu/VBoxContainer/Button" to="Control" method="_on_Button2_button_down"]
[connection signal="button_down" from="Control/Panels/Player Menu/VBoxContainer/Button" to="Control" method="_on_Button_button_down"]
[connection signal="button_down" from="Control/Panel/Option Button" to="Control" method="_on_Option_Button_button_down"]
[connection signal="button_down" from="Control/Panel/Player Button" to="Control" method="_on_Player_Button_button_down"]
